Removed that, was confusing

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
-  <title>RIP: Diablo 3 DPS &amp; EHP Calculator</title>  
+  <title>Diablo 3 DPS &amp; EHP Calculator</title>  
   <meta name="description" content="Calculate your Diablo 3 Characters DPS/EHP from your gear" />
   <meta name="keywords" content="diablo 3, dps, ehp, gear, calculator, effective health pool, tool, compare" />
   <link rel="shortcut icon" href="/favicon.ico" sizes="16x16 32x32 64x64 128x128">
